# thesis-models

./: .gitignore  LICENSE  README.md  config.json  requirements.txt
data/networks/: traffic.csv  traffic_old.csv
experiments/: 1. Wireless Networks Analysis.ipynb  3.1. Arrival MAP fitting.ipynb  3.2. Relay network analysis.ipynb
src/corelib/: README.md  setup.py
src/corelib/corelib/: config.py  varvals.py
src/corelib/tests/: test_config.py  test_varvals.py
src/pycsmaca/: setup.py
src/pydesim/: README.md  setup.py
src/pydesim/pydesim/: __init__.py  simulator.py  statistics.py
src/pyons/: setup.py
src/pyons/examples/: objects_ping_pong_1.py  static_pingpong_1.py
src/pyons/pyons/: __init__.py  base.py  dispatcher.py  entities.py  errors.py  queues.py
src/pyons/tests/: test_queues.py
src/pyqumo/: README.md  setup.py
src/pyqumo/cpp_src/: Base.cpp  Base.h  CMakeLists.txt  Components.cpp  Components.h  Functions.h  Records.cpp  Records.h  Simulation.cpp  Simulation.h  Statistics.cpp  Statistics.h  System.cpp  System.h  main.cpp
src/pyqumo/cqumo/: Base.h  CMakeLists.txt  Makefile  Randoms.cpp  Randoms.h
src/pyqumo/cqumo/tandem/: Base.cpp  Base.h  Components.cpp  Components.h  Functions.cpp  Functions.h  Journals.cpp  Journals.h  Simulation.cpp  Simulation.h  Statistics.cpp  Statistics.h  System.cpp  System.h  main.cpp
src/pyqumo/experiments/: fitting_ph_johnson89.ipynb
src/qumos/: setup.py
src/rfid_core/: setup.py
src/rfidam/: setup.py
src/rfidlib/: setup.py
src/rfidsim/: setup.py
src/traf/: setup.py
src/wisim/: setup.py
(+107 files in other folders)
